# Modular-Rust-ReverseProxy

./: .gitignore  AIreview.md  Cargo.toml  README.md  build.rs  config.toml  devPlan.md  haiku.md
cli/: go.mod  main.go  web_html.go  web_server.go
src/: colors.rs  config.rs  context.rs  h2_handler.rs  h3_handler.rs  log.rs  main.rs  metrics.rs  pool.rs  server.rs  tests.rs
src/http/: mod.rs  request.rs  response.rs
src/modules/: active_health.rs  admin_api.rs  cache.rs  circuit_breaker.rs  compression.rs  health_check.rs  helpers.rs  load_balancer.rs  metrics_exporter.rs  mod.rs  proxy_core.rs  rate_limiter.rs  raw_tcp.rs  request_id.rs  url_rewriter.rs
src/script/: loader.rs  mod.rs  parser.rs  runtime.rs  stdlib.rs
